examples/amd/bower_components/aerisjs/src/errors/missingapikeyerror.js
define([
  'aeris/errors/errortypefactory'
], function(ErrorTypeFactory) {
  /**
   * @class MissingApiKeysError
   * @namespace aeris.errors
   * @extends aeris.errors.AbstractError
  */
  return new ErrorTypeFactory({
    name: 'MissingApiKeyError'
  });
});
